working with dockerizing